# openhand_node

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
launch/: openhand.launch
nodes/: openhandNode.py
param/: model_parameters.yaml
src/openhand_node/: hands.py  lib_robotis_mod.py  registerDict.py  syncRW_XMHandler.py
src/openhand_node/depricated/: test_sync_write.py
srv/: HoldServos.srv  MoveServos.srv  OperatingMode.srv  ReadCurrent.srv  ReadLoad.srv  ReadServos.srv  ReadTemperature.srv  TorqueServos.srv
